Fix position of permission bubbles anchored off the padlock.

Allows permission request bubbles to share some of the anchoring logic
used by the site settings bubble.

Under non-MD/Harmony, this will shift the permissions request popup up
slightly so that the arrow points to the icon.

Under MD/Harmony, the bubble will be anchored to the bottom of the
location bar itself, with edges aligned.

BUG=682073

Review-Url: https://codereview.chromium.org/2693803002
Cr-Commit-Position: refs/heads/master@{#450268}

Former-commit-id: 6ef9d93c9b63ff3169f2c3c13e1ef2b4113ae1a1